--- a/package.json
+++ b/package.json
@@ -7,25 +7,30 @@
   "scripts": {
     "compile": "tsc",
     "postinstall": "npm run compile",
-    "start": "npm run compile && node ./dist/index.js",
-    "dev": "ts-node ./src/index.ts"
+    "start": "node --es-module-specifier-resolution=node ./build/index.js ",
+    "start:dev": "nodemon",
+    "build": "rimraf ./build && tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@apollo/server": "^4.0.0",
+    "@apollo/server": "^4.0.1",
     "@notionhq/client": "^2.2.1",
-    "@types/node": "^18.8.5",
+    "@types/express": "^4.17.14",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
-    "graphql-scalars": "^1.19.0",
-    "typescript": "^4.8.4"
+    "graphql-scalars": "^1.19.0"
   },
   "devDependencies": {
-    "ts-node": "^10.9.1"
+    "@types/cors": "^2.8.12",
+    "@types/node": "^18.11.2",
+    "nodemon": "^2.0.20",
+    "rimraf": "^3.0.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   }
 }
