--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,16 @@
-
 {
-    "compilerOptions": {
-      "rootDirs": ["src"],
-      "outDir": "dist",
-      "lib": ["es2020"],
-      "target": "es2020",
-      "module": "esnext",
-      "moduleResolution": "node",
-      "esModuleInterop": true,
-      "types": ["node"],
-    },
-    "ts-node": {
-        "esm": true
-    },
-  }
+  "compilerOptions": {
+    "target": "ES2020",                          
+    "module": "ESNext",                    
+    "lib": ["es6"],                     
+    "allowJs": true,
+    "outDir": "build",                          
+    "rootDir": "src",
+    "strict": true,         
+    "noImplicitAny": true,
+    "esModuleInterop": true,
+    "moduleResolution": "node",
+    "types": ["node"]
+  },
+  "include": ["src/**/*", "src/notion"]
+}
